--- a/G1213SHUO/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/G1213SHUO/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,8 +129,8 @@ ContentBrowserTab1.SelectedPaths=/Game/FirstPersonCPP/Blueprints
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-G1213SHUO.TimeStamp=2019.12.13-14.36.28
-G1213SHUO.LastCompileMethod=External
+G1213SHUO.TimeStamp=2019.12.13-15.07.55
+G1213SHUO.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.08.22-18.13.45
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.08.22-18.13.50
@@ -782,7 +782,6 @@ BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonCPP/Blueprints/RarestCandy.RarestCandy
 
 [PluginBrowser]
 InstalledPlugins=TargetSystem
@@ -888,10 +887,12 @@ FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonCPP/Blueprints/RarestCandy
-MRUItem1=/Game/FirstPersonCPP/Blueprints/BP_UnluckyTrap
-MRUItem2=/Game/FirstPersonCPP/Blueprints/WBP_PlayerWidget
-MRUItem3=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/FirstPersonCPP/Blueprints/M_BlackHole
+MRUItem1=/Game/FirstPersonCPP/Blueprints/BP_ResetPad
+MRUItem2=/Game/FirstPersonCPP/Blueprints/RarestCandy
+MRUItem3=/Game/FirstPersonCPP/Blueprints/BP_UnluckyTrap
+MRUItem4=/Game/FirstPersonCPP/Blueprints/WBP_PlayerWidget
+MRUItem5=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
 
 [DetailCategories]
 ProgressBar.Layout=True
@@ -1128,6 +1129,59 @@ RarestCandy_C.HLOD=True
 RarestCandy_C.Mobile=True
 RarestCandy_C.AssetUserData=True
 REINST_RarestCandy_C_37.RarestCandy=True
+BP_ResetPad_C.Tick=True
+BP_ResetPad_C.ResetPad=True
+BP_ResetPad_C.Rendering=True
+BP_ResetPad_C.Replication=True
+BP_ResetPad_C.Input=True
+BP_ResetPad_C.Actor=True
+BP_ResetPad_C.Variable=True
+BP_ResetPad_C.TransformCommon=True
+BP_ResetPad_C.Sockets=True
+BP_ResetPad_C.StaticMesh=True
+BP_ResetPad_C.Physics=True
+BP_ResetPad_C.Collision=True
+BP_ResetPad_C.Lighting=True
+BP_ResetPad_C.Tags=True
+BP_ResetPad_C.ComponentReplication=True
+BP_ResetPad_C.Cooking=True
+BP_ResetPad_C.Events=True
+BP_ResetPad_C.Materials=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
@@ -1142,6 +1196,7 @@ RarestCandy="\"Object.RarestCandy.MeshComponent.Object.Rendering.OverrideMateria
 REINST_RarestCandy_C_37="\"Object.RarestCandy.MeshComponent.Object.Rendering.OverrideMaterials\" \"Object.RarestCandy.MeshComponent.Object.Lighting.LightmassSettings\" \"Object.RarestCandy.MeshComponent.Object.Collision.BodyInstance\" \"Object.RarestCandy.MeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonCPP/Blueprints/BP_ResetPad.BP_ResetPad;
 RecentlyPlaced=/Game/FirstPersonCPP/Blueprints/RarestCandy.RarestCandy;
 RecentlyPlaced=/Game/FirstPersonCPP/Blueprints/BP_UnluckyTrap.BP_UnluckyTrap;
 
